Fixed a bug where grid cells being too high would not correctly apply no wrapping to reduce the height

--- a/FrontEnd/Modules/Base/Css/kendo.custom.css
+++ b/FrontEnd/Modules/Base/Css/kendo.custom.css
@@ -2726,6 +2726,11 @@ td.k-group-cell,
     color: var(--white-color);
 }
 
+.k-grid td {
+    text-overflow: ellipsis !important;
+    white-space: nowrap !important;
+}
+
 .k-scheduler-layout .k-selected,
 .k-scheduler .k-today.k-selected,
 .k-grid tr.k-selected,
